# it3030-paf-2026-smart-campus-group163

./: README.md  justfile
.github/: CODEOWNERS
ai-service/: .env.example  .gitignore  campus_kb.txt  main.py  pyproject.toml
ai-service/docs/: dummy.txt
ai-service/utils/: context.py
ai-service/workflows/: approval.py  concierge.py  rag.py  triage.py
api/: .env.example  pom.xml
api/scripts/: apply_migrations.sql
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.tsx  index.css
client/src/components/: Navbar.tsx  NotificationBell.tsx  ProtectedRoute.tsx  StudentBookingsLayout.tsx
client/src/contexts/: AuthContext.tsx  NotificationContext.tsx
client/src/data/: campus.json  mockFacilities.js
client/src/layouts/: MainLayout.tsx  Sidebar.tsx
client/src/lib/: api.ts  authService.ts  bookings.ts  facilityService.ts  supabase.ts
client/src/pages/: AddFacility.tsx  AddFacilityPage.jsx  AdminBookingManagementPage.tsx  AdminDashboard.tsx  AdminIncidentsPage.tsx  AnalyticsPage.tsx  AuditLogsPage.tsx  BookingCalendarPage.tsx  BookingDetailsPage.tsx  BookingFormPage.tsx  BookingListPage.tsx  CampusEventsPage.tsx  CampusMap.tsx  CompleteProfile.tsx  Dashboard.tsx  EditFacility.tsx  EditFacilityPage.css  EditFacilityPage.d.ts  EditFacilityPage.jsx  FacilitiesPage.jsx  FacilityDetails.tsx  FacilityDetailsPage.jsx  FacilityList.tsx  IncidentQueuePage.tsx  IncidentTicketsPage.tsx  LandingPage.tsx  Login.tsx  (+10 more)
docs/: AUTH_SETUP.md  DATABASE_MIGRATION_INSTRUCTIONS.md  NOTIFICATION_SYSTEM_TODO.md  SUPABASE_STORAGE_SETUP.md
(+128 files in other folders)
